<resources>
    <string name="app_name">果粒</string>
    <string name="button_allow">允许</string>
    <string name="button_deny">拒绝</string>
    <string name="network_disable">网络连接不可用</string>

    <!-- Main Activity-->
    <string name="main_activity_bar_first">果粒</string>
    <string name="main_activity_bar_second">果核</string>
    <string name="main_activity_bar_third">商城</string>
    <string name="main_activity_bar_forth">我的</string>
    <string name="main_activity_top_hint">大家都在搜:儿童相机 宝宝秀</string>
    <string name="main_activity_title_0">关注</string>
    <string name="main_activity_title_1">推荐</string>
    <string name="main_activity_title_2">热搜</string>
    <string name="main_second_choose_picture">选择照片</string>
    <string name="main_second_camera_control">相机控制</string>
    <string name="main_second_local_gallery">本地图库</string>
    <string name="main_rational_message">允许读取和写入磁盘才可以使用完整功能</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <array name="spinner_family">
        <item>爸爸</item>
        <item>妈妈</item>
        <item>爷爷</item>
        <item>奶奶</item>
        <item>外婆</item>
        <item>外爷</item>
    </array>
</resources>
