<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentPanel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.guohe.corecenter.activity.MainActivity">
    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/bt_gl"
            style="@style/BottomButtonStyle"
            android:drawableTop="@mipmap/guoli_pre"
            android:text="@string/main_activity_bar_first"/>
        <Button
            android:id="@+id/bt_gh"
            style="@style/BottomButtonStyle"
            android:drawableTop="@mipmap/guohe"
            android:text="@string/main_activity_bar_second"/>
        <ImageView
            android:id="@+id/iv_plus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="center"
            android:contentDescription="@string/main_second_local_gallery"
            android:src="@mipmap/add_icn"
            android:background="?attr/selectableItemBackground"/>
        <Button
            android:id="@+id/bt_shop"
            style="@style/BottomButtonStyle"
            android:drawableTop="@mipmap/shangcheng"
            android:text="@string/main_activity_bar_third"/>
        <Button
            android:id="@+id/bt_mine"
            style="@style/BottomButtonStyle"
            android:drawableTop="@mipmap/wode"
            android:text="@string/main_activity_bar_forth"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
