<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f7"
    android:orientation="vertical">
    <include layout="@layout/common_toolbar"/>

    <LinearLayout
        android:id="@+id/ll_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp">
        <LinearLayout
            android:id="@+id/ll_choose_picture"
            style="@style/SecondTopLinearLayoutStyle">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/choose_icn"/>
            <TextView
                style="@style/SecondTopTextViewStyle"
                android:text="@string/main_second_choose_picture"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_control_camera"
            style="@style/SecondTopLinearLayoutStyle">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/camera_icn"/>
            <TextView
                style="@style/SecondTopTextViewStyle"
                android:text="@string/main_second_camera_control"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_local_gallery"
            style="@style/SecondTopLinearLayoutStyle"
            android:layout_marginRight="15dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/album_icn"/>
            <TextView
                style="@style/SecondTopTextViewStyle"
                android:text="@string/main_second_local_gallery"/>
        </LinearLayout>
    </LinearLayout>
    <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_fl_bg"
        app:tr_head_height="100dp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"/>
    </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
</LinearLayout>