<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_marginTop="25dp"
        app:contentInsetStart="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_scan"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:scaleType="center"
                android:src="@mipmap/scan_icn"
                android:layout_gravity="left"
                android:background="?attr/selectableItemBackground"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/grey_bg"
                android:drawableRight="@mipmap/search_icn"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="13sp"
                android:hint="@string/main_activity_top_hint"/>
            <ImageView
                android:id="@+id/iv_group"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:scaleType="center"
                android:src="@mipmap/toolbar_right"
                android:layout_gravity="right"
                android:background="?attr/selectableItemBackground"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:id="@+id/ll_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">
        <LinearLayout
            style="@style/MainLinearLayoutStyle">
            <TextView
                android:id="@+id/tv_follow"
                style="@style/TopTitleImageStyle"
                android:text="@string/main_activity_title_0" />
            <ImageView
                android:id="@+id/iv_follow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:visibility="gone"
                android:src="@mipmap/bg_arrow"/>
        </LinearLayout>
        <LinearLayout
            style="@style/MainLinearLayoutStyle">
            <TextView
                android:id="@+id/tv_recommend"
                style="@style/TopTitleImageStyle"
                android:text="@string/main_activity_title_1"
                android:textColor="#818ACC"
                android:textSize="17sp" />
            <ImageView
                android:id="@+id/iv_recommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:src="@mipmap/bg_arrow"/>
        </LinearLayout>
        <LinearLayout
            style="@style/MainLinearLayoutStyle">
            <TextView
                android:id="@+id/tv_hot"
                style="@style/TopTitleImageStyle"
                android:text="@string/main_activity_title_2" />
            <ImageView
                android:id="@+id/iv_hot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:visibility="gone"
                android:src="@mipmap/bg_arrow"/>
        </LinearLayout>
    </LinearLayout>
    <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_fl_bg"
        android:paddingTop="15dp"
        android:layout_marginBottom="50dp"
        app:tr_head_height="100dp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"/>
    </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
</LinearLayout>